# TCC-IA-VSCODE

./: Gemini.py  Raptor mini.py  students.json
pipeline_ETL_com_dashboard1/GPT5-mini/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
pipeline_ETL_com_dashboard1/GPT5-mini/.VSCodeCounter/2026-06-10_18-51-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
pipeline_ETL_com_dashboard1/GPT5-mini/data/: customers.json  products.json  sales.csv
pipeline_ETL_com_dashboard1/GPT5-mini/docker/: docker-compose.yml
pipeline_ETL_com_dashboard1/GPT5-mini/docs/: USAGE.md
pipeline_ETL_com_dashboard1/GPT5-mini/tests/: test_transform.py
pipeline_ETL_com_dashboard5/Raptor-mini/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pipeline_ETL_com_dashboard5/Raptor-mini/.VSCodeCounter/2026-06-10_20-02-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
pipeline_ETL_com_dashboard5/Raptor-mini/data/: customers.json  products.json  sales.csv
pipeline_ETL_com_dashboard5/Raptor-mini/docs/: DESIGN.md  TESTING.md  USAGE.md
pipeline_ETL_com_dashboard5/Raptor-mini/sql/: schema.sql
pipeline_ETL_com_dashboard5/Raptor-mini/src/: __init__.py
pipeline_ETL_com_dashboard5/Raptor-mini/src/api/: __init__.py  product_service.py
pipeline_ETL_com_dashboard5/Raptor-mini/src/dashboard/: __init__.py  app.py
pipeline_ETL_com_dashboard5/Raptor-mini/tests/: conftest.py  test_load.py  test_quality.py  test_transform.py
(+820 files in other folders)
