[project]
name = "sales_analytics_etl"
version = "0.1.0"
description = "Sales ETL and dashboard solution with PostgreSQL, Streamlit, Docker, and reporting features."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Auto Generated", email = "noreply@example.com"}]

[project.dependencies]
pandas = "^2.2"
requests = "^2.31"
python-dotenv = "^1.0"
psycopg2-binary = "^2.9"
streamlit = "^1.25"
plotly = "^5.18"
sqlalchemy = "^2.0"
pydantic = "^2.9"
openpyxl = "^3.1"
jinja2 = "^3.1"
reportlab = "^3.8"
pytest = "^8.4"
pytest-cov = "^4.1"

[project.scripts]
run-etl = "etl.main:main"
run-dashboard = "dashboard.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"